2022-05-12T16:38:32Z:
* notice: last 14d: all unq: 4201 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17440 434 / 21576 536
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21641 536
* notice: prev json diff / prev day diff: unq all: +0 +126 -0 -61 / +18 +668 -0 -160

2022-05-12T08:30:17Z:
* notice: last 14d: all unq: 4136 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17440 434 / 21499 532
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21576 536
* notice: prev json diff / prev day diff: unq all: +4 +132 -0 -55 / +18 +542 -0 -99

2022-05-12T02:03:35Z:
* notice: last 14d: all unq: 4059 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17263 433 / 21089 518
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21499 532
* notice: prev json diff / prev day diff: unq all: +14 +410 -0 -44 / +14 +410 -0 -44

2022-05-11T02:03:39Z:
* notice: last 14d: all unq: 3826 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20866 518
* notice: next accum: outdated-all outdated-unq / all unq: 17263 433 / 21089 518
* notice: prev json diff // prev day diff: unq all: +0 +105 / -0 -44 // +0 +105 / -0 -44

2022-05-10T16:38:36Z:
* notice: last 14d: all unq: 3782 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20802 518
* notice: next accum: outdated-all outdated-unq / all unq: 17084 432 / 20866 518
* notice: prev json diff // prev day diff: unq all: +0 +125 / -0 -61 // +2 +353 / -0 -162

2022-05-10T08:29:09Z:
* notice: last 14d: all unq: 3718 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20741 516
* notice: next accum: outdated-all outdated-unq / all unq: 17084 432 / 20802 518
* notice: prev json diff // prev day diff: unq all: +2 +123 / -0 -62 // +2 +228 / -0 -101

2022-05-10T01:39:48Z:
* notice: last 14d: all unq: 3657 24
* notice: prev accum: outdated-all outdated-unq / all unq: 16903 430 / 20512 516