@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-30T02:04:50Z",
-  "count" : 179,
+  "timestamp" : "2022-05-13T02:10:59Z",
+  "count" : 135,
   "count_minmax" : [ 0, 179 ],
   "count_prev_day_inc" : 179,
   "count_prev_day_dec" : 154,
