@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-12T16:38:32Z",
-  "count" : 258,
-  "count_minmax" : [ 0, 258 ],
+  "timestamp" : "2022-05-13T02:10:59Z",
+  "count" : 364,
+  "count_minmax" : [ 0, 364 ],
   "count_prev_day_inc" : 668,
   "count_prev_day_dec" : 160,
   "uniques" : 4,
