@@ -1,15 +1,10 @@
 {
-  "count": 4201,
+  "count": 4246,
   "uniques": 26,
   "clones": [
     {
-      "timestamp": "2022-04-28T00:00:00Z",
-      "count": 17,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-04-29T00:00:00Z",
-      "count": 179,
+      "count": 135,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 258,
+      "count": 364,
       "uniques": 4
     }
   ]
